--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "pubsub-js": "^1.6.0",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
@@ -25,13 +26,13 @@
     "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.12.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "handlebars": "^4.0.11",
     "handlebars-loader": "^1.7.0",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.20.1",
-    "uglifyjs-webpack-plugin": "^1.2.7",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   }
