--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "babel-eslint": "^8.2.3",
-    "babel-loader": "^8.0.0-beta.3",
-    "babel-plugin-dynamic-import-webpack": "^1.0.2",
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "css-loader": "^0.28.9",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
