--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "promise-polyfill": "^8.1.0",
     "pubsub-js": "^1.6.0",
-    "uglifyjs-webpack-plugin": "^1.3.0",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
+    "1.3.0": "^1.3.0",
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
     "babel-eslint": "^10.0.1",
@@ -33,6 +34,7 @@
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
   }
