--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "base64-arraybuffer": "^0.1.5",
     "promise-polyfill": "^8.1.0",
     "pubsub-js": "^1.6.0",
     "whatwg-fetch": "^2.0.4"
